codeanywhere_workspace/routes/temp/124d141ce73a972d11b8/errors
/usercode/file.cpp:1:1: error: 'gvugvyuvgvy' does not name a type
 gvugvyuvgvy
 ^
